Creating a link in Home Page to access the Proxy page.

--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,11 @@
                                 <h3>Observer</h3>
                             </a>
                         </li>
+                        <li>
+                            <a href="app/proxy/index.html">
+                                <h3>Proxy</h3>
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
