Adding the Iterator pattern.

--- a/website/index.html
+++ b/website/index.html
@@ -28,6 +28,11 @@
                                 <h3>Proxy</h3>
                             </a>
                         </li>
+                        <li>
+                            <a href="app/iterator/index.html">
+                                <h3>Iterator</h3>
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
